salesforce-prep/force-app/main/default/objects/Position__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <description>Formula: days since the position opened.</description>
    <formula>IF(ISBLANK(Open_Date__c), NULL, TODAY() - Open_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>