salesforce-prep/force-app/main/default/objects/Position__c/fields/Max_Pay__c.field-meta.xml
<CustomField>
    <fullName>Max_Pay__c</fullName>
    <label>Max Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>