salesforce-prep/force-app/main/default/objects/Position__c/fields/Number_of_Applications__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Applications__c</fullName>
    <description>Roll-up summary: count of job applications.</description>
    <label>Number of Applications</label>
    <summaryForeignKey>Job_Application__c.Position__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>