salesforce-prep/force-app/main/default/objects/Position__c/validationRules/Approved_Position_Needs_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Position_Needs_Manager</fullName>
    <active>true</active>
    <description>An approved position must have a hiring manager.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, 'Open - Approved'), ISBLANK(Hiring_Manager__c))</errorConditionFormula>
    <errorDisplayField>Hiring_Manager__c</errorDisplayField>
    <errorMessage>Choose a Hiring Manager before approving the position.</errorMessage>
</ValidationRule>