salesforce-prep/force-app/main/default/objects/Position__c/validationRules/Max_Pay_Not_Below_Min_Pay.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Pay_Not_Below_Min_Pay</fullName>
    <active>true</active>
    <description>Max pay must be greater than or equal to min pay.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Min_Pay__c)), NOT(ISBLANK(Max_Pay__c)), Max_Pay__c &lt; Min_Pay__c)</errorConditionFormula>
    <errorDisplayField>Max_Pay__c</errorDisplayField>
    <errorMessage>Max Pay cannot be less than Min Pay.</errorMessage>
</ValidationRule>